@@ -983,6 +983,7 @@ public class JmDNSImpl extends JmDNS implements DNSStatefulObject, DNSTaskStarte
         this.registerServiceType(info.getTypeWithSubtype());
 
         // bind the service to this address
+        info.recoverState();
         info.setServer(_localHost.getName());
         info.addAddress(_localHost.getInet4Address());
         info.addAddress(_localHost.getInet6Address());
