@@ -1,5 +1,6 @@
 CHANGELOG XX XXXX 2011 Pierre Frisch
 Rev the source code to 3.4.1
+unregisterService() prevents subsequent registerService() - ID: 3163605
 
 CHANGELOG 20 January 2011 Pierre Frisch
 Rev the source code to 3.4.0
